# Kalri

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/m4ykey/kalri/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  KalriEngine.cpp  KalriEngine.h  native-lib.cpp
app/src/main/java/com/m4ykey/kalri/: DeviceManager.kt  MainActivity.kt  showToast.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/m4ykey/kalri/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
